Changes in Release 1.3.3
==============================================
[JXT-78] - XSBoolean does not extend XMLObject
[JXT-79] - Disable RSA v1.5 key transport in favor of RSA-OAEP for all data encryption key types
[JXT-80] - Update 3rd party runtime library dependencies

Changes in Release 1.3.2
==============================================
[JXT-73] - DetachedSignatureTest failure
[JXT-74] - Some pom changes for XMLTooling
[JXT-77] - Update POM for Shib.net Repo and attach generated Javadocs
[JOST-119] - change pom to create attached -sources jar
[JOST-136] - Update Version class with getVersion() and getName() static methods
[JOST-157] - references to spaces.internet.edu may need changed to wiki.shibboleth.net

Changes in Release 1.3.1
==============================================
[JXT-71] - Static helper classes should not use static Loggers
[JXT-72] - Update dependency libs for 1.3.1

Changes in Release 1.3.0
==============================================
[JXT-28] - Implement better support for xsi:nil
[JXT-29] - Support for dateTime schema type
[JXT-60] - Add interfaces and helpers for the global attributes from the 'xml' namespace
[JXT-65] - XMLHelper prettyPrintXML should use the same serialization logic as writeNode
[JXT-67] - Can we turn down the ExplicitKeySignatureTrustEngine ERROR to WARN
[JXT-68] - Update 3rd Party Libs for 1.3 release
[JXT-69] - Remove check that prevents xmltooling from starting when Sun 1.5 and below JAXP impl is used
[JXT-70] - Deprecate alwaysDeclare property of Namespace
* Introduction of NamespaceManager, which handles management of namespace info that is in scope on an XMLObject.


Changes in Release 1.2.2
==============================================
[JXT-63] - Update 3rd party libraries for release 1.2.2
* Add XML serialization method that works solely on strings
* Add helper class for building XML schemas
* Clean up project POM file

Changes in Release 1.2.1
==============================================